# openBatch

./: .gitignore  LICENSE  Makefile  QA_CHECKLIST.md  README.md  dev.sh
.claude/: launch.json
frontend/: .prettierignore  eslint.config.js  package-lock.json  (+4 more)
openbatch-backend/: README.md  pyproject.toml  requirements.txt
openbatch-backend/app/: __init__.py  main.py  schemas.py
openbatch-backend/app/api/: __init__.py  project.py  projects.py  scaleup.py  simulate.py
openbatch-backend/app/models/: __init__.py
openbatch-backend/app/solver/: __init__.py  assemble.py  base.py  campaign.py  convert.py  engine.py  feeds.py  props.py  registry.py  rules.py  scaleup.py  scheduler.py  state.py  util.py
openbatch-backend/app/solver/ops/: __init__.py  centrifuge.py  charge.py  concentrate.py  crystallize.py  decant.py  distill.py  dry.py  extract.py  ferment.py  filter.py  filter_dry.py  heatcool.py  pressure_transfer.py  react.py  timing.py  transfer.py  wash_cake.py  yield_react.py
openbatch-backend/tests/: _helpers.py  _sample.py  test_assemble.py  test_campaign.py  test_centrifuge_dry.py  test_charge.py  test_concentrate.py  test_convert.py  test_crystallize.py  test_distill.py  test_engine.py  test_extract_decant.py  test_ferment.py  test_filter.py  test_filter_dry.py  test_health.py  test_heatcool.py  test_pressure_transfer.py  test_project_validation.py  test_react.py  test_registry.py  test_rules.py  test_scaleup.py  test_scheduler.py  test_simulate.py  test_solvers.py  test_state.py  test_timing.py  test_transfer.py  test_wash_cake.py  test_yield_react.py
(+136 files in other folders)
